syntax = "proto3";

option csharp_namespace = "Inventory.GRPC.Client";

service StockProtoService{
	rpc GetStock (GetStockRequest) returns (StockModel);
}

message GetStockRequest {
	string itemNo = 1; 
}

message StockModel {
	int32 quantity = 1;
}